Fix letter spacing

--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@
 html {
   font-size: 100%;
   font-family: "Slabo 27px";
+  letter-spacing: 1.25px;
 }
 
 body {
